PN-10813: refactor AttachmentUtils